# crude-pipeline-blending-optimization-with-pyomo

./: 2025-07-14 crude optimization.ipynb  2025-07-14 crude optimization.py  README.md  article.md  benchmark_rust.py  crude_oil_scheduling_optimization.ipynb  crude_oil_scheduling_optimization.py  pyproject.toml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
